--- a/index.html
+++ b/index.html
@@ -3,39 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Products</title>
- <link rel="icon" type="image/x-icon" href="logo t.png"> 
+  <title>The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
-    import { getAuth } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
-    import { getFirestore } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
-  </script>
   <script type="module" src="script.js"></script>
-<!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '655776497078930');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
 </head>
 <body>
   <header class="site-header">
-     <nav>
-      <a href="index.html" class="logo">
-        <img src="logo.png" alt="The Geek Shop Logo" style="height: 40px;">
-      </a>
+    <nav>
+      <div class="logo">
+        <img src="logo.png" alt="The Geek Shop" width="120">
+      </div>
       <div class="nav-links">
         <a href="index.html">Products</a>
         <a href="status.html">Order Status</a>
@@ -44,21 +21,27 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
     </nav>
   </header>
 
-  <div class="container">
+  <main class="container">
     <h1>Products</h1>
-    <h2>New Added</h2>
-    <div id="new-products" class="product-list new-hot-list"></div>
-    <h2>Hot Deals</h2>
-    <div id="hot-deals" class="product-list new-hot-list"></div>
-    <h2>All Products</h2>
-    <div id="all-products" class="product-list"></div>
-  </div>
-   
+    <section>
+      <h2>New Added</h2>
+      <div id="new-products" class="product-list new-hot-list"></div>
+    </section>
+    <section>
+      <h2>Hot Deals</h2>
+      <div id="hot-deals" class="product-list new-hot-list"></div>
+    </section>
+    <section>
+      <h2>All Products</h2>
+      <div id="all-products" class="product-list"></div>
+    </section>
+  </main>
+
   <div id="checkout-modal" class="modal">
-    <div class="modal-content card">
+    <div class="card modal-content">
       <div class="modal-header">
         <h2>Checkout</h2>
-        <button id="close-modal-btn" class="secondary">Close</button>
+        <button id="close-modal-btn">Close</button>
       </div>
       <form id="checkout-form" class="form">
         <div class="row">
@@ -71,17 +54,17 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
             <input id="co-color" readonly>
           </div>
         </div>
+        <input id="co-product-id" type="hidden">
+        <input id="co-unit-price-raw" type="hidden">
+        <input id="co-available-stock" type="hidden">
         <div class="row">
           <div>
             <label>Price (tk)</label>
             <input id="co-price" readonly>
-            <input id="co-product-id" type="hidden">
-            <input id="co-unit-price-raw" type="hidden">
-            <input id="co-available-stock" type="hidden">
           </div>
           <div>
             <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" required>
+            <input id="co-qty" type="number" min="1" value="1">
           </div>
         </div>
         <div class="row">
@@ -96,22 +79,32 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
         </div>
         <div class="row">
           <div>
+            <label>Pay Now (tk)</label>
+            <input id="co-pay-now" readonly>
+          </div>
+          <div>
+            <label>Due (tk)</label>
+            <input id="co-due" readonly>
+          </div>
+        </div>
+        <div class="row">
+          <div>
             <label>Name</label>
-            <input id="co-name" required>
+            <input id="co-name">
           </div>
           <div>
             <label>Phone</label>
-            <input id="co-phone" type="tel" required>
+            <input id="co-phone">
           </div>
         </div>
         <div>
           <label>Address</label>
-          <textarea id="co-address" required></textarea>
+          <textarea id="co-address"></textarea>
         </div>
         <div class="row">
           <div>
             <label>Payment Method</label>
-            <select id="co-payment" required>
+            <select id="co-payment">
               <option value="">Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
@@ -119,43 +112,32 @@ src="https://www.facebook.com/tr?id=655776497078930&ev=PageView&noscript=1"
           </div>
           <div>
             <label>Pay to (Send money)</label>
-            <input id="co-payment-number" value="This text is read-only" readonly >
+            <input id="co-payment-number" readonly>
           </div>
         </div>
         <div>
           <label>Transaction ID</label>
           <input id="co-txn">
         </div>
-        <p id="co-note" class="muted"></p>
-        <button id="place-order-btn" type="submit">Place Order</button>
+        <div>
+          <label>
+            <input type="checkbox" id="co-policy">
+            I agree to the <a href="#" id="policy-link">policy</a>.
+          </label>
+        </div>
+        <div>
+          <p id="co-note" class="muted"></p>
+        </div>
+        <button type="submit" id="place-order-btn">Place Order</button>
       </form>
     </div>
-  </div>    <div class="image-viewer" id="image-viewer">
-        <button id="close-viewer" class="close-viewer">×</button>
-        <img id="viewer-img" src="" alt="Zoomed Image">
-    </div>
-<footer style="background-color: #e8e8ff; padding: 20px; text-align: center; height: 90px; color:  #000000; font-family: Arial, sans-serif;">
-  <div>
-    <a href="https://www.facebook.com/thegeek.shop0" target="_blank" style="margin: 0 10px;">
-      <img src="facebook.png" alt="Facebook" style="width: 30px; height: 30px;">
-    </a>
-    <a href="https://www.instagram.com/thegeekshop.0" target="_blank" style="margin: 0 10px;">
-      <img src="instagram.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
-        <a href="wa.me/01960788862" target="_blank" style="margin: 0 10px;">
-      <img src="whatsapp.png" alt="Instagram" style="width: 30px; height: 30px;">
-    </a>
   </div>
- 
-  <p>&copy; All rights reserved by The Geek Shop</p>
-</footer>
+
+  <div class="image-viewer" id="image-viewer">
+    <button class="close-viewer" id="close-viewer">×</button>
+    <img id="viewer-img" src="" alt="">
+  </div>
+
+  <footer>© All rights reserved by The Geek Shop</footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
