--- a/admin.html
+++ b/admin.html
@@ -5,126 +5,140 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
   <link rel="stylesheet" href="style.css">
+  <script type="module" src="script.js"></script>
 </head>
 <body>
-  <header>
-    <nav class="navbar">
-      <a href="index.html">Products</a>
-      <a href="status.html">Order Status</a>
-      <a href="admin.html" class="active">Admin</a>
+  <header class="site-header">
+    <nav>
+      <div class="logo">
+        <img src="logo.png" alt="The Geek Shop" width="120">
+      </div>
+      <div class="nav-links">
+        <a href="index.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
     </nav>
   </header>
 
-  <main>
-    <section id="login-panel" style="display: block;">
-      <h2>Admin Login</h2>
-      <form id="login-form" class="card">
-        <div class="form-group">
-          <label for="admin-email">Email</label>
-          <input type="email" id="admin-email" required>
-        </div>
-        <div class="form-group">
-          <label for="admin-pass">Password</label>
-          <input type="password" id="admin-pass" required>
-        </div>
-        <button type="submit">Login</button>
-      </form>
+  <main class="container">
+    <section id="login-panel">
+      <h1>Admin Login</h1>
+      <div class="card">
+        <form id="login-form" class="form">
+          <div>
+            <label>Email</label>
+            <input id="admin-email" type="email">
+          </div>
+          <div>
+            <label>Password</label>
+            <input id="admin-pass" type="password">
+          </div>
+          <button type="submit">Login</button>
+        </form>
+      </div>
     </section>
 
     <section id="admin-panel" style="display: none;">
-      <h2>Admin Panel</h2>
-      <button onclick="logoutAdmin()">Logout</button>
-
-      <h3>Add Product</h3>
-      <form id="add-product-form" class="card">
-        <div class="row">
-          <div class="form-group">
-            <label for="add-name">Name</label>
-            <input type="text" id="add-name" required>
+      <div class="panel-header">
+        <h1>Admin Panel</h1>
+        <button onclick="logoutAdmin()">Logout</button>
+      </div>
+      <h2>Add Product</h2>
+      <div class="card">
+        <form id="add-product-form" class="form">
+          <div class="row">
+            <div>
+              <label>Name</label>
+              <input id="add-name">
+            </div>
+            <div>
+              <label>Price (tk)</label>
+              <input id="add-price">
+            </div>
           </div>
-          <div class="form-group">
-            <label for="add-price">Price (tk)</label>
-            <input type="text" id="add-price" required>
+          <div class="row">
+            <div>
+              <label>Discount (tk)</label>
+              <input id="add-discount" type="number" min="0">
+            </div>
+            <div>
+              <label>Image URL</label>
+              <input id="add-image">
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="form-group">
-            <label for="add-discount">Discount (tk)</label>
-            <input type="text" id="add-discount">
+          <div class="row">
+            <div>
+              <label>Category</label>
+              <select id="add-category">
+                <option value="all">All</option>
+                <option value="new">New</option>
+                <option value="hot">Hot</option>
+              </select>
+            </div>
+            <div>
+              <label>Color</label>
+              <input id="add-color">
+            </div>
           </div>
-          <div class="form-group">
-            <label for="add-image">Image URL</label>
-            <input type="url" id="add-image" required>
+          <div class="row">
+            <div>
+              <label>Stock</label>
+              <input id="add-stock" type="number" min="-1">
+            </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="form-group">
-            <label for="add-category">Category</label>
-            <select id="add-category" required>
-              <option value="all">All</option>
-              <option value="new">New</option>
-              <option value="hot">Hot</option>
-            </select>
+          <div>
+            <label>Description</label>
+            <textarea id="add-desc"></textarea>
           </div>
-          <div class="form-group">
-            <label for="add-color">Color</label>
-            <input type="text" id="add-color">
-          </div>
-        </div>
-        <div class="form-group">
-          <label for="add-stock">Stock</label>
-          <input type="text" id="add-stock">
-        </div>
-        <div class="form-group">
-          <label for="add-desc">Description</label>
-          <textarea id="add-desc"></textarea>
-        </div>
-        <button type="submit">Add Product</button>
-      </form>
-
-      <h3>Products</h3>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Category</th>
-            <th>Color</th>
-            <th>Discount (tk)</th>
-            <th>Stock</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="products-body"></tbody>
-      </table>
-
-      <h3>Orders</h3>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            <th>Time</th>
-            <th>Product</th>
-            <th>Color</th>
-            <th>Qty</th>
-            <th>Delivery</th>
-            <th>Paid</th>
-            <th>Due</th>
-            <th>Name</th>
-            <th>Phone</th>
-            <th>Address</th>
-            <th>Payment</th>
-            <th>Txn ID</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody id="orders-body"></tbody>
-      </table>
+          <button type="submit">Add Product</button>
+        </form>
+      </div>
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="products-body"></tbody>
+        </table>
+      </div>
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid/Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body"></tbody>
+        </table>
+      </div>
     </section>
   </main>
 
-  <script type="module" src="script.js"></script>
+  <footer>© All rights reserved by The Geek Shop</footer>
 </body>
 </html>
