--- a/admin.html
+++ b/admin.html
@@ -86,6 +86,14 @@
               <label>Stock</label>
               <input id="add-stock" type="number" min="-1">
             </div>
+            <div>
+              <label>Availability</label>
+              <select id="add-availability">
+                <option value="ready">Ready to Order</option>
+                <option value="preorder">Pre Order</option>
+                <option value="upcoming">Upcoming</option>
+              </select>
+            </div>
           </div>
           <div>
             <label>Description</label>
