--- a/index.html
+++ b/index.html
@@ -4,140 +4,119 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The Geek Shop</title>
-  <link rel="stylesheet" href="style.css">
-  <script type="module" src="script.js"></script>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <header class="site-header">
+  <header>
     <nav>
-      <div class="logo">
-        <img src="logo.png" alt="The Geek Shop" width="120">
-      </div>
-      <div class="nav-links">
-        <a href="index.html">Products</a>
-        <a href="status.html">Order Status</a>
-        <a href="admin.html">Admin</a>
-      </div>
+      <ul>
+        <li><a href="index.html" class="active">Products</a></li>
+        <li><a href="status.html">Order Status</a></li>
+        <li><a href="admin.html">Admin</a></li>
+      </ul>
     </nav>
   </header>
 
-  <main class="container">
-    <h1>Products</h1>
+  <main>
     <section>
+      <h1>Products</h1>
       <h2>New Added</h2>
-      <div id="new-products" class="product-list new-hot-list"></div>
-    </section>
-    <section>
-      <h2>Hot Deals</h2>
-      <div id="hot-deals" class="product-list new-hot-list"></div>
-    </section>
-    <section>
-      <h2>All Products</h2>
-      <div id="all-products" class="product-list"></div>
-    </section>
-  </main>
+      <div class="products" id="new-products"></div>
 
-  <div id="checkout-modal" class="modal">
-    <div class="card modal-content">
-      <div class="modal-header">
+      <h2>Hot Deals</h2>
+      <div class="products" id="hot-deals"></div>
+
+      <h2>All Products</h2>
+      <div class="products" id="all-products"></div>
+    </section>
+
+    <div class="modal" id="checkout-modal">
+      <div class="modal-content">
         <h2>Checkout</h2>
         <button id="close-modal-btn">Close</button>
-      </div>
-      <form id="checkout-form" class="form">
-        <div class="row">
+        <form id="checkout-form">
+          <input type="hidden" id="co-product-id">
           <div>
             <label>Product Name</label>
-            <input id="co-product-name" readonly>
+            <input type="text" id="co-product-name" readonly>
           </div>
           <div>
             <label>Color</label>
-            <input id="co-color" readonly>
+            <input type="text" id="co-color" readonly>
           </div>
-        </div>
-        <input id="co-product-id" type="hidden">
-        <input id="co-unit-price-raw" type="hidden">
-        <input id="co-available-stock" type="hidden">
-        <div class="row">
           <div>
             <label>Price (tk)</label>
-            <input id="co-price" readonly>
+            <input type="text" id="co-price" readonly>
+            <input type="hidden" id="co-unit-price-raw">
+            <input type="hidden" id="co-available-stock">
           </div>
           <div>
             <label>Quantity</label>
-            <input id="co-qty" type="number" min="1" value="1">
+            <input type="number" id="co-qty" min="1" value="1" required>
           </div>
-        </div>
-        <div class="row">
           <div>
             <label>Delivery</label>
-            <input id="co-delivery" readonly>
+            <input type="text" id="co-delivery" readonly>
           </div>
           <div>
             <label>Total (tk)</label>
-            <input id="co-total" readonly>
+            <input type="text" id="co-total" readonly>
           </div>
-        </div>
-        <div class="row">
           <div>
             <label>Name</label>
-            <input id="co-name">
+            <input type="text" id="co-name" required>
           </div>
           <div>
             <label>Phone</label>
-            <input id="co-phone">
+            <input type="text" id="co-phone" required>
           </div>
-        </div>
-        <div>
-          <label>Address</label>
-          <textarea id="co-address"></textarea>
-        </div>
-        <div class="row">
+          <div>
+            <label>Address</label>
+            <textarea id="co-address" required></textarea>
+          </div>
           <div>
             <label>Payment Method</label>
-            <select id="co-payment">
-              <option value="">Select</option>
+            <select id="co-payment" required>
+              <option value="" disabled selected>Select</option>
               <option value="Cash on Delivery">Cash on Delivery</option>
               <option value="Bkash">Bkash</option>
             </select>
           </div>
           <div>
             <label>Pay to (Send money)</label>
-            <input id="co-payment-number" readonly>
+            <input type="text" id="co-payment-number" readonly>
           </div>
-        </div>
-        <div class="row">
           <div>
+            <label>Transaction ID</label>
+            <input type="text" id="co-txn">
+          </div>
+          <div id="pay-due-div" style="display:none;">
             <label>Pay Now (tk)</label>
-            <input id="co-pay-now" readonly>
+            <input type="text" id="co-pay-now" readonly>
+            <label>Due Amount (tk)</label>
+            <input type="text" id="co-due" readonly>
           </div>
           <div>
-            <label>Due (tk)</label>
-            <input id="co-due" readonly>
+            <input type="checkbox" id="co-policy" required>
+            <label for="co-policy">I agree to the <a href="status.html" target="_blank">Order Policy</a></label>
           </div>
-        </div>
-        <div>
-          <label>Transaction ID</label>
-          <input id="co-txn">
-        </div>
-        <div>
-          <label>
-            <input type="checkbox" id="co-policy">
-            I agree to the <a href="#" id="policy-link">policy</a>.
-          </label>
-        </div>
-        <div>
-          <p id="co-note" class="muted"></p>
-        </div>
-        <button type="submit" id="place-order-btn">Place Order</button>
-      </form>
+          <p id="co-note"></p>
+          <button type="submit" id="place-order-btn">Place Order</button>
+        </form>
+      </div>
     </div>
-  </div>
 
-  <div class="image-viewer" id="image-viewer">
-    <button class="close-viewer" id="close-viewer">×</button>
-    <img id="viewer-img" src="" alt="">
-  </div>
+    <div class="viewer" id="image-viewer">
+      <img id="viewer-img" src="" alt="">
+      <button id="close-viewer">×</button>
+    </div>
+  </main>
 
-  <footer>© All rights reserved by The Geek Shop</footer>
+  <footer>
+    <p>© All rights reserved by The Geek Shop</p>
+  </footer>
+
+  <script type="module" src="script.js"></script>
 </body>
 </html>
