--- a/admin.html
+++ b/admin.html
@@ -4,74 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin - The Geek Shop</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" type="module"></script>
 </head>
 <body>
-  <header>
+  <header class="site-header">
     <nav>
-      <ul>
-        <li><a href="index.html">Products</a></li>
-        <li><a href="status.html">Order Status</a></li>
-        <li><a href="admin.html" class="active">Admin</a></li>
-      </ul>
+      <div class="logo"><img src="https://i.ibb.co/2nRwX9G/logo.png" alt="Logo" width="50"></div>
+      <div class="nav-links">
+        <a href="index.html">Products</a>
+        <a href="status.html">Order Status</a>
+        <a href="admin.html">Admin</a>
+      </div>
     </nav>
   </header>
 
-  <main>
-    <section id="login-panel">
+  <main class="container">
+    <div id="login-panel" class="card" style="display: none;">
       <h2>Admin Login</h2>
-      <form id="login-form">
+      <form id="login-form" class="form">
         <div>
           <label>Email</label>
-          <input type="email" id="admin-email" required>
+          <input id="admin-email" type="email" required>
         </div>
         <div>
           <label>Password</label>
-          <input type="password" id="admin-pass" required>
+          <input id="admin-pass" type="password" required>
         </div>
         <button type="submit">Login</button>
       </form>
-    </section>
+    </div>
 
-    <section id="admin-panel" style="display:none;">
-      <h2>Admin Panel</h2>
-      <button id="logout-btn">Logout</button>
+    <div id="admin-panel" class="card" style="display: none;">
+      <div class="panel-header">
+        <h2>Admin Panel</h2>
+        <button onclick="logoutAdmin()">Logout</button>
+      </div>
 
-      <h3>Add Product</h3>
-      <form id="add-product-form">
-        <div>
-          <label>Name</label>
-          <input type="text" id="add-name" required>
-          <label>Price (tk)</label>
-          <input type="text" id="add-price" required>
+      <h2>Add Product</h2>
+      <form id="add-product-form" class="form">
+        <div class="row">
+          <div>
+            <label>Name</label>
+            <input id="add-name" required>
+          </div>
+          <div>
+            <label>Price (tk)</label>
+            <input id="add-price" required>
+          </div>
         </div>
-        <div>
-          <label>Discount (tk)</label>
-          <input type="text" id="add-discount" value="0">
-          <label>Image URL</label>
-          <input type="text" id="add-image" required>
+        <div class="row">
+          <div>
+            <label>Discount (tk)</label>
+            <input id="add-discount" value="0">
+          </div>
+          <div>
+            <label>Image URL</label>
+            <input id="add-image" required>
+          </div>
         </div>
-        <div>
-          <label>Category</label>
-          <select id="add-category" required>
-            <option value="all">All</option>
-            <option value="new">New</option>
-            <option value="hot">Hot</option>
-          </select>
-          <label>Color</label>
-          <input type="text" id="add-color">
+        <div class="row">
+          <div>
+            <label>Category</label>
+            <select id="add-category" required>
+              <option value="all">All</option>
+              <option value="new">New</option>
+              <option value="hot">Hot</option>
+            </select>
+          </div>
+          <div>
+            <label>Color</label>
+            <input id="add-color">
+          </div>
         </div>
-        <div>
-          <label>Stock</label>
-          <input type="text" id="add-stock" value="0">
-        </div>
-        <div>
-          <label>Availability</label>
-          <select id="add-availability">
-            <option value="ready">Ready to order</option>
-            <option value="preorder">Pre order</option>
-            <option value="upcoming">Upcoming</option>
-          </select>
+        <div class="row">
+          <div>
+            <label>Stock</label>
+            <input id="add-stock" type="number" value="0">
+          </div>
+          <div>
+            <label>Availability</label>
+            <select id="add-availability" required>
+              <option value="Ready">Ready to Order</option>
+              <option value="Pre Order">Pre Order</option>
+              <option value="Upcoming">Upcoming</option>
+            </select>
+          </div>
         </div>
         <div>
           <label>Description</label>
@@ -80,50 +98,52 @@
         <button type="submit">Add Product</button>
       </form>
 
-      <h3>Products</h3>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>Price</th>
-            <th>Category</th>
-            <th>Color</th>
-            <th>Discount (tk)</th>
-            <th>Stock</th>
-            <th>Availability</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody id="products-body"></tbody>
-      </table>
+      <h2>Products</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Name</th>
+              <th>Price</th>
+              <th>Category</th>
+              <th>Color</th>
+              <th>Discount (tk)</th>
+              <th>Stock</th>
+              <th>Availability</th>
+              <th>Status</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="products-body"></tbody>
+        </table>
+      </div>
 
-      <h3>Orders</h3>
-      <table>
-        <thead>
-          <tr>
-            <th></th>
-            <th>Time</th>
-            <th>Product</th>
-            <th>Color</th>
-            <th>Qty</th>
-            <th>Delivery</th>
-            <th>Paid</th>
-            <th>Due</th>
-            <th>Name</th>
-            <th>Phone</th>
-            <th>Address</th>
-            <th>Payment</th>
-            <th>Txn ID</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody id="orders-body"></tbody>
-      </table>
-    </section>
+      <h2>Orders</h2>
+      <div class="table-wrapper">
+        <table class="data-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Time</th>
+              <th>Product</th>
+              <th>Color</th>
+              <th>Qty</th>
+              <th>Delivery</th>
+              <th>Paid</th>
+              <th>Due</th>
+              <th>Name</th>
+              <th>Phone</th>
+              <th>Address</th>
+              <th>Payment</th>
+              <th>Txn ID</th>
+              <th>Status</th>
+            </tr>
+          </thead>
+          <tbody id="orders-body"></tbody>
+        </table>
+      </div>
+    </div>
   </main>
-
-  <script type="module" src="script.js"></script>
 </body>
 </html>
